<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="-10dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="0dp"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:orientation="vertical"


    android:visibility="visible"
    tools:context=".CadastroReceita"
    >


    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CadastroReceita">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:padding="2sp"


            android:text="@string/text_cadastro_receita"
            android:textAlignment="center"

            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view_cadastro"
            style="@style/containerFormulario"


            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintHeight="1100dp"
            />

        <EditText
            android:id="@+id/text_nome"
            style="@style/Edit_Text"
            android:layout_marginTop="30sp"
            android:hint="@string/text_nome"
            android:maxLength="50"
            app:layout_constraintEnd_toEndOf="@id/view_cadastro"
            app:layout_constraintStart_toStartOf="@id/view_cadastro"


            app:layout_constraintTop_toTopOf="@id/view_cadastro" />

        <EditText
            android:id="@+id/text_descricao"
            style="@style/Edit_Text"
            android:layout_marginTop="20sp"
            android:hint="@string/descricao"
            android:inputType="textMultiLine"
            android:maxLength="200"
            app:layout_constraintEnd_toEndOf="@id/view_cadastro"
            app:layout_constraintStart_toStartOf="@id/view_cadastro"

            app:layout_constraintTop_toBottomOf="@id/text_nome" />


        <Spinner
            android:id="@+id/grupo_spinner"

            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:contextClickable="true"
            android:scrollbarSize="@dimen/cardview_default_elevation"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/text_preparo"
            app:layout_constraintStart_toStartOf="@id/text_preparo"
            app:layout_constraintTop_toBottomOf="@id/text_descricao"
            tools:visibility="visible" />



        <EditText
            android:id="@+id/ingredientes"
            style="@style/Edit_Text"

            android:layout_height="135sp"
            android:layout_marginTop="20sp"
            android:gravity="start|top|left"
            android:hint="@string/ingredientes"
            android:inputType="textMultiLine"
            android:maxLength="1000"
            app:layout_constraintEnd_toEndOf="@id/view_cadastro"

            app:layout_constraintStart_toStartOf="@id/view_cadastro"
            app:layout_constraintTop_toBottomOf="@id/dataPicker" />

        <EditText
            android:id="@+id/text_preparo"
            style="@style/Edit_Text"
            android:layout_height="135sp"
            android:layout_marginTop="20sp"
            android:gravity="start|top|left"
            android:hint="@string/modo_preparo"
            android:inputType="textMultiLine"
            android:maxLength="1000"
            app:layout_constraintEnd_toEndOf="@id/view_cadastro"

            app:layout_constraintStart_toStartOf="@id/view_cadastro"
            app:layout_constraintTop_toBottomOf="@id/ingredientes" />

        <CheckBox
            android:id="@+id/checkboxFez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/fez_receita"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/view_cadastro"
            app:layout_constraintStart_toStartOf="@id/view_cadastro"
            app:layout_constraintTop_toBottomOf="@id/btnCadastrarCategoria"


            />


        <Button
            android:id="@+id/dataPicker"
            android:text="1/JAN/2020"
            android:background="@color/design_default_color_primary_dark"
            android:textSize="25sp"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:layout_constraintStart_toStartOf="@id/text_descricao"
            app:layout_constraintEnd_toEndOf="@id/text_descricao"
            app:layout_constraintTop_toBottomOf="@id/checkboxFez"
            style="@style/spinner"
            android:onClick="mostrarDatePicker"/>






            />


        <!--   <RatingBar
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"


            tools:layout_editor_absoluteX="92sp"
            tools:layout_editor_absoluteY="773sp" /> -->
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/text_preparo"


            app:layout_constraintStart_toStartOf="@id/text_preparo"
            android:layout_marginTop="10sp"
            app:layout_constraintTop_toBottomOf="@id/text_preparo">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_preparo"

                android:layout_marginTop="5dp"

                >

                <RadioButton
                    android:id="@+id/radioBtn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ruim"



                    />

                <RadioButton
                    android:id="@+id/radioBtn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/razoavel"


                    />


                <RadioButton
                    android:id="@+id/radioBtn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bom" />

                <RadioButton
                    android:id="@+id/radioBtn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otimo" />

                <RadioButton
                    android:id="@+id/radioBtn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excelente" />


            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:text="@string/limpar"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/view_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/linear"

            />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/cadastrar"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnLimpar"
            app:layout_constraintStart_toEndOf="@+id/btnLimpar"

            />

        <ImageButton
            android:id="@+id/btnCadastrarCategoria"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:layout_constraintStart_toEndOf="@id/btnDeleteCategoria"

            app:layout_constraintTop_toBottomOf="@id/grupo_spinner"
            android:layout_marginLeft="100dp"

            />

        <ImageButton
            android:id="@+id/btnDeleteCategoria"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@android:drawable/ic_delete"
            app:layout_constraintTop_toBottomOf="@id/grupo_spinner"
            app:layout_constraintStart_toStartOf="@id/text_descricao"
            android:layout_marginLeft="0dp"


            />



        <ImageButton
            android:id="@+id/btnAlterarCategoria"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            app:layout_constraintTop_toBottomOf="@id/grupo_spinner"
            app:layout_constraintStart_toStartOf="@id/text_descricao"
            android:layout_marginLeft="80dp"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>